; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/imx/extr_parallel-display.c_imx_pd_unbind.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/imx/extr_parallel-display.c_imx_pd_unbind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.imx_parallel_display = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, %struct.device*, i8*)* @imx_pd_unbind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @imx_pd_unbind(%struct.device* %0, %struct.device* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.imx_parallel_display*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device* %1, %struct.device** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = call %struct.imx_parallel_display* @dev_get_drvdata(%struct.device* %8)
  store %struct.imx_parallel_display* %9, %struct.imx_parallel_display** %7, align 8
  %10 = load %struct.imx_parallel_display*, %struct.imx_parallel_display** %7, align 8
  %11 = getelementptr inbounds %struct.imx_parallel_display, %struct.imx_parallel_display* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %3
  %15 = load %struct.imx_parallel_display*, %struct.imx_parallel_display** %7, align 8
  %16 = getelementptr inbounds %struct.imx_parallel_display, %struct.imx_parallel_display* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = call i32 @drm_panel_detach(i64 %17)
  br label %19

19:                                               ; preds = %14, %3
  %20 = load %struct.imx_parallel_display*, %struct.imx_parallel_display** %7, align 8
  %21 = getelementptr inbounds %struct.imx_parallel_display, %struct.imx_parallel_display* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @kfree(i32 %22)
  ret void
}

declare dso_local %struct.imx_parallel_display* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @drm_panel_detach(i64) #1

declare dso_local i32 @kfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
